fixed vertical align back button

--- a/src/app/components/dialog/fs-dialog.component.scss
+++ b/src/app/components/dialog/fs-dialog.component.scss
@@ -14,6 +14,13 @@
       fs-dialog-title {
         .back {
           display: inline-block !important;
+
+          .mat-button-wrapper {
+            display: flex;
+            justify-content: center;
+            height: 100%;
+            align-items: center;
+          }
         }
 
         .close {
